compiler (19)/compiler (15)/compiler (8) (5) (3) (2)/compiler (8) (5) (3)/compiler (8) (5)/compiler (8)/compiler/src/antlr/AngulerParser.java
// Generated from C:/Users/Lenovo/Downloads/Telegram Desktop/compiler (8) (5) (5)/compiler (8) (5) (3)/compiler (8) (5)/compiler (8)/compiler/src/antlr/AngulerParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngulerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LINE_COMMENT=2, BLOCK_COMMENT=3, COMPONENT=4, INJECTABLE=5, INPUT=6, 
		OUTPUT=7, VIEW_CHILD=8, CONTENT_CHILD=9, SELECTOR=10, STANDALONE=11, IMPORTS=12, 
		TEMPLATE=13, TEMPLATE_URL=14, STYLES=15, STYLE_URLS=16, STYLE_URL=17, 
		PROVIDED_IN=18, NG_IF=19, NG_FOR=20, NG_CLASS=21, NG_STYLE=22, NG_MODEL=23, 
		NG_ON_INIT=24, NG_ON_CHANGES=25, NG_ON_DESTROY=26, PRIVATE=27, PUBLIC=28, 
		PROTECTED=29, CLASS=30, IMPORT=31, FROM=32, EXPORT=33, CONST=34, LET=35, 
		VAR=36, IF=37, ELSE=38, FOR=39, WHILE=40, DO=41, SWITCH=42, CASE=43, DEFAULT=44, 
		RETURN=45, BREAK=46, CONTINUE=47, NEW=48, THIS=49, SUPER=50, FUNCTION=51, 
		INTERFACE=52, VOID=53, NULL=54, UNDEFINED=55, EMIT=56, STRING=57, NUMBER=58, 
		BOOLEAN=59, ANY=60, ELLIPSIS=61, INCREMENT=62, DECREMENT=63, NOT=64, QUESTION=65, 
		SUM=66, MIN=67, MUL=68, SLASH=69, MOD=70, AND=71, OR=72, PIPE=73, ARROW=74, 
		IS_EQUAL=75, NOT_EQUAL=76, IS_EQUAL_TYPE=77, NOT_EQUAL_TYPE=78, LESS_EQUAL=79, 
		GREATER_EQUAL=80, OPEN_BRACE=81, CLOSE_BRACE=82, OPEN_PAREN=83, CLOSE_PAREN=84, 
		OPEN_BRACKET=85, CLOSE_BRACKET=86, COMMA=87, SEMICOLON=88, DOT=89, COLON=90, 
		EQUAL=91, DOLLAR=92, HASH=93, OPENTAG=94, CLOSETAG=95, DIV_TAG=96, H1_TAG=97, 
		H2_TAG=98, H3_TAG=99, P_TAG=100, IMG_TAG=101, A_TAG=102, SPAN_TAG=103, 
		BUTTON_TAG=104, NG_CONTENT=105, NG_TEMPLATE=106, STYLE_ATTR=107, ALT_ATTR=108, 
		SRC_ATTR=109, HREF_ATTR=110, ROUTER_LINK=111, ROUTER_OUTLET=112, FORM_CONTROL_NAME=113, 
		FORM_GROUP=114, FORM_ARRAY=115, BOOLEAN_LITERAL=116, DECIMAL_INTEGER_LITERAL=117, 
		FLOAT_LITERAL=118, STRING_LITERAL=119, TEMPLATE_LITERAL=120, IDENTIFIER=121, 
		ANGULAR=122, UNEXPECTED_TOKEN=123;
	public static final int
		RULE_prog = 0, RULE_injectable_declaration = 1, RULE_injectable_metadata = 2, 
		RULE_injectable_metadata_property = 3, RULE_export_statement = 4, RULE_anguler_import = 5, 
		RULE_component_declaration = 6, RULE_component_metadata = 7, RULE_metadata_property = 8, 
		RULE_type_annotation = 9, RULE_base_type_annotation = 10, RULE_primitive_type = 11, 
		RULE_array_type = 12, RULE_structured_type = 13, RULE_type_pair = 14, 
		RULE_class_declaration = 15, RULE_class_body = 16, RULE_property_declaration = 17, 
		RULE_method_declaration = 18, RULE_method_body = 19, RULE_function_declaration = 20, 
		RULE_function_body = 21, RULE_emit_statement = 22, RULE_parameter_list = 23, 
		RULE_parameter = 24, RULE_declaraiton_keywords = 25, RULE_variable_declaration = 26, 
		RULE_primary = 27, RULE_type_arguments = 28, RULE_postfix_expression = 29, 
		RULE_postfix_operator = 30, RULE_value = 31, RULE_assignment = 32, RULE_literal_value = 33, 
		RULE_unary_expression = 34, RULE_logical_expression = 35, RULE_relational_expression = 36, 
		RULE_equality_expression = 37, RULE_arithmetic_expression = 38, RULE_conditional_expression = 39, 
		RULE_expression = 40, RULE_json_object = 41, RULE_json_pair = 42, RULE_imports_array = 43, 
		RULE_array = 44, RULE_array_element = 45, RULE_instruction = 46, RULE_conditional_statements = 47, 
		RULE_block = 48, RULE_if_statement = 49, RULE_for_statement = 50, RULE_switch_statement = 51, 
		RULE_switch_body = 52, RULE_switch_case = 53, RULE_switch_default = 54, 
		RULE_while_statement = 55, RULE_do_while_statement = 56, RULE_continue_Statement = 57, 
		RULE_return_Statement = 58, RULE_break_statement = 59, RULE_expressionSequence = 60, 
		RULE_interface_Declaration = 61, RULE_generic_Type = 62, RULE_eos = 63, 
		RULE_html_value = 64, RULE_tags = 65, RULE_open_tag = 66, RULE_html_attribute = 67, 
		RULE_close_tag = 68, RULE_single_tag = 69, RULE_template_variable = 70, 
		RULE_ng_content = 71, RULE_ng_template = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "injectable_declaration", "injectable_metadata", "injectable_metadata_property", 
			"export_statement", "anguler_import", "component_declaration", "component_metadata", 
			"metadata_property", "type_annotation", "base_type_annotation", "primitive_type", 
			"array_type", "structured_type", "type_pair", "class_declaration", "class_body", 
			"property_declaration", "method_declaration", "method_body", "function_declaration", 
			"function_body", "emit_statement", "parameter_list", "parameter", "declaraiton_keywords", 
			"variable_declaration", "primary", "type_arguments", "postfix_expression", 
			"postfix_operator", "value", "assignment", "literal_value", "unary_expression", 
			"logical_expression", "relational_expression", "equality_expression", 
			"arithmetic_expression", "conditional_expression", "expression", "json_object", 
			"json_pair", "imports_array", "array", "array_element", "instruction", 
			"conditional_statements", "block", "if_statement", "for_statement", "switch_statement", 
			"switch_body", "switch_case", "switch_default", "while_statement", "do_while_statement", 
			"continue_Statement", "return_Statement", "break_statement", "expressionSequence", 
			"interface_Declaration", "generic_Type", "eos", "html_value", "tags", 
			"open_tag", "html_attribute", "close_tag", "single_tag", "template_variable", 
			"ng_content", "ng_template"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'@Component'", "'@Injectable'", "'@Input'", 
			"'@Output'", "'@ViewChild'", "'@ContentChild'", "'selector'", "'standalone'", 
			"'imports'", "'template'", "'templateUrl'", "'styles'", "'styleUrls'", 
			"'styleUrl'", "'providedIn'", "'*ngIf'", "'*ngFor'", "'ngClass'", "'ngStyle'", 
			"'ngModel'", "'ngOnInit'", "'ngOnChanges'", "'ngOnDestroy'", "'private'", 
			"'public'", "'protected'", "'class'", "'import'", "'from'", "'export'", 
			"'const'", "'let'", "'var'", "'if'", "'else'", "'for'", "'while'", "'do'", 
			"'switch'", "'case'", "'default'", "'return'", "'break'", "'continue'", 
			"'new'", "'this'", "'super'", "'function'", "'interface'", "'void'", 
			"'null'", "'undefined'", "'emit'", "'string'", "'number'", "'boolean'", 
			"'any'", "'...'", "'++'", "'--'", "'!'", "'?'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'&&'", "'||'", "'|'", "'=>'", "'=='", "'!='", "'==='", 
			"'!=='", "'<='", "'>='", "'{'", "'}'", "'('", "')'", "'['", "']'", "','", 
			"';'", "'.'", "':'", "'='", "'$'", "'#'", "'<'", "'>'", "'div'", "'h1'", 
			"'h2'", "'h3'", "'p'", "'img'", "'a'", "'span'", "'button'", "'ng-content'", 
			"'ng-template'", "'style'", "'alt'", "'src'", "'href'", "'routerLink'", 
			"'router-outlet'", "'formControlName'", "'formGroup'", "'formArray'", 
			null, null, null, null, null, null, "'@angular'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "LINE_COMMENT", "BLOCK_COMMENT", "COMPONENT", "INJECTABLE", 
			"INPUT", "OUTPUT", "VIEW_CHILD", "CONTENT_CHILD", "SELECTOR", "STANDALONE", 
			"IMPORTS", "TEMPLATE", "TEMPLATE_URL", "STYLES", "STYLE_URLS", "STYLE_URL", 
			"PROVIDED_IN", "NG_IF", "NG_FOR", "NG_CLASS", "NG_STYLE", "NG_MODEL", 
			"NG_ON_INIT", "NG_ON_CHANGES", "NG_ON_DESTROY", "PRIVATE", "PUBLIC", 
			"PROTECTED", "CLASS", "IMPORT", "FROM", "EXPORT", "CONST", "LET", "VAR", 
			"IF", "ELSE", "FOR", "WHILE", "DO", "SWITCH", "CASE", "DEFAULT", "RETURN", 
			"BREAK", "CONTINUE", "NEW", "THIS", "SUPER", "FUNCTION", "INTERFACE", 
			"VOID", "NULL", "UNDEFINED", "EMIT", "STRING", "NUMBER", "BOOLEAN", "ANY", 
			"ELLIPSIS", "INCREMENT", "DECREMENT", "NOT", "QUESTION", "SUM", "MIN", 
			"MUL", "SLASH", "MOD", "AND", "OR", "PIPE", "ARROW", "IS_EQUAL", "NOT_EQUAL", 
			"IS_EQUAL_TYPE", "NOT_EQUAL_TYPE", "LESS_EQUAL", "GREATER_EQUAL", "OPEN_BRACE", 
			"CLOSE_BRACE", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"COMMA", "SEMICOLON", "DOT", "COLON", "EQUAL", "DOLLAR", "HASH", "OPENTAG", 
			"CLOSETAG", "DIV_TAG", "H1_TAG", "H2_TAG", "H3_TAG", "P_TAG", "IMG_TAG", 
			"A_TAG", "SPAN_TAG", "BUTTON_TAG", "NG_CONTENT", "NG_TEMPLATE", "STYLE_ATTR", 
			"ALT_ATTR", "SRC_ATTR", "HREF_ATTR", "ROUTER_LINK", "ROUTER_OUTLET", 
			"FORM_CONTROL_NAME", "FORM_GROUP", "FORM_ARRAY", "BOOLEAN_LITERAL", "DECIMAL_INTEGER_LITERAL", 
			"FLOAT_LITERAL", "STRING_LITERAL", "TEMPLATE_LITERAL", "IDENTIFIER", 
			"ANGULAR", "UNEXPECTED_TOKEN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngulerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngulerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngulerParser.EOF, 0); }
		public List<Anguler_importContext> anguler_import() {
			return getRuleContexts(Anguler_importContext.class);
		}
		public Anguler_importContext anguler_import(int i) {
			return getRuleContext(Anguler_importContext.class,i);
		}
		public List<Component_declarationContext> component_declaration() {
			return getRuleContexts(Component_declarationContext.class);
		}
		public Component_declarationContext component_declaration(int i) {
			return getRuleContext(Component_declarationContext.class,i);
		}
		public List<Injectable_declarationContext> injectable_declaration() {
			return getRuleContexts(Injectable_declarationContext.class);
		}
		public Injectable_declarationContext injectable_declaration(int i) {
			return getRuleContext(Injectable_declarationContext.class,i);
		}
		public List<Export_statementContext> export_statement() {
			return getRuleContexts(Export_statementContext.class);
		}
		public Export_statementContext export_statement(int i) {
			return getRuleContext(Export_statementContext.class,i);
		}
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 11811160112L) != 0)) {
				{
				setState(151);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(146);
					anguler_import();
					}
					break;
				case 2:
					{
					setState(147);
					component_declaration();
					}
					break;
				case 3:
					{
					setState(148);
					injectable_declaration();
					}
					break;
				case 4:
					{
					setState(149);
					export_statement();
					}
					break;
				case 5:
					{
					setState(150);
					class_declaration();
					}
					break;
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Injectable_declarationContext extends ParserRuleContext {
		public TerminalNode INJECTABLE() { return getToken(AngulerParser.INJECTABLE, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(AngulerParser.OPEN_PAREN, 0); }
		public Injectable_metadataContext injectable_metadata() {
			return getRuleContext(Injectable_metadataContext.class,0);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(AngulerParser.CLOSE_PAREN, 0); }
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public Injectable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_injectable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterInjectable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitInjectable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitInjectable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Injectable_declarationContext injectable_declaration() throws RecognitionException {
		Injectable_declarationContext _localctx = new Injectable_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_injectable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(INJECTABLE);
			setState(159);
			match(OPEN_PAREN);
			setState(160);
			injectable_metadata();
			setState(161);
			match(CLOSE_PAREN);
			setState(162);
			class_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Injectable_metadataContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACE() { return getToken(AngulerParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(AngulerParser.CLOSE_BRACE, 0); }
		public List<Injectable_metadata_propertyContext> injectable_metadata_property() {
			return getRuleContexts(Injectable_metadata_propertyContext.class);
		}
		public Injectable_metadata_propertyContext injectable_metadata_property(int i) {
			return getRuleContext(Injectable_metadata_propertyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngulerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngulerParser.COMMA, i);
		}
		public Injectable_metadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_injectable_metadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterInjectable_metadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitInjectable_metadata(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitInjectable_metadata(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Injectable_metadataContext injectable_metadata() throws RecognitionException {
		Injectable_metadataContext _localctx = new Injectable_metadataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_injectable_metadata);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(OPEN_BRACE);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROVIDED_IN) {
				{
				setState(165);
				injectable_metadata_property();
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(166);
					match(COMMA);
					setState(167);
					injectable_metadata_property();
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(175);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
